# persistent-homology-analysis

./: README.md
alpha_test/: CMakeLists.txt  density_filtration.cpp  dist_matrix.cpp  gudhi_tools.cpp  gudhi_tools.h  homology.cpp  phat_tools.cpp  phat_tools.h  rips.cpp  utils.cpp  utils.h
nn/: _params.json  algo.py  cpu_alpha.sh  cpu_density.sh  cpu_dist_part.sh  cpu_final_part.sh  cpu_final_part_rips.sh  cpu_part.sh  data.py  encoders.py  gpu_part.sh  job_pool.sh  main.py  params_clf.json  params_cmu.json  params_conv.json  params_fc.json  params_mxdclf.json  params_mxdenc.json  params_pca.json  params_proc.json  run_tests.sh  test_cycle.py  utils.py
nn/datahandling/: cmu_center.py  cmu_vids_to_data.py  generate_test_shape.py  render_earth_randangle.py  render_earth_s1.py  render_earth_s2.py
nn/phom/: dist_matrix  embed_homologies.py  generate_mnist_input.py  generate_test_input.py  plot_alpha2.py  rips
nn/tools/: data_on_cycle.py  dist_hist.py  npy_to_simple.py  plot_3d_data.py  plot_3d_data_matplotlib.py  plot_losses.py  plot_matrices.py  prepare_for_js.py  reduce_data.py
nn/tools/cycleto3d/: encode_points_on_cycle.py  params_sph.json  prepare_cycle_for_js.py  train_on_points_on_cycle.py
